Exercício aula 6 - background

--- a/segundo-bimestre/front-end-I/index.html
+++ b/segundo-bimestre/front-end-I/index.html
@@ -1,52 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Review</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
+<body>
 
-  <head>
-    <meta charset="utf-8">
-    <title>Jane Doe</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-  </head>
+    <h1>Review: Meu Amigo Totoro</h1>
 
-  <body>
-    <header>
-      <h1>Jane Doe</h1>
-      <div class="job-title">Web Developer</div>
-    </header>
+    <div class="media-picture"></div>
 
-    <main>
-      <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, 
-        there live the blind texts. Separated they live in Bookmarksgrove right at the coast of 
-        the Semantics, a large language ocean. A small river named Duden flows by their place and 
-        supplies it with the necessary regelialia.</p>
-      <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, 
-        there live the blind texts. Separated they live in Bookmarksgrove right at the coast of 
-        the Semantics, a large language ocean. A small river named Duden flows by their place and 
-        supplies it with the necessary regelialia.</p>
+    <span class="review-score">Nota: 10/10</span>
 
-      <h2 id="high">Highlights</h2>
+    <h2>Sobre o Filme</h2>
 
-      <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. 
-        It is a paradisematic country, in which roasted parts of sentences fly into your mouth. 
-        A small river named Duden flows by their place and supplies it with the necessary regelialia. 
-        It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-      <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. 
-        It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+        sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>
 
-    </main>
+    <h2>Críticas</h2>
 
-    <footer>
-      <h2>Contact information</h2>
-      <ul>
-        <li><strong>Email:</strong>
-          <a href="mailto:jane@example.com">jane@example.com</a>
-        </li>
-        <li><strong>Web:</strong>
-          <a href="http://example.com">http://example.com</a>
-        </li>
-        <li><strong>Tel:</strong> 123 45678</li>
-      </ul>
-    </footer>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+        sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>
 
-  </body>
+    <a href="http://">Assista ao trailer</a>
 
+</body>
 </html>
