Botão para nova página e estrutura do forms

--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
 </head>
 <body>
 
-    <header>
+    <header class="header">
         <img src="images/winx-club-logo-3d.png" alt="Winx Club's Logo" id="logo">
         <h1>Alfea College for Faries</h1>
+       
     </header>
+
+    <button id="cadastro" onclick="location.href='cadastro.html';">Cadastro</button>
+    o
+
     <main>
         <section>
         <p> <strong>The Alfea College for Fairies</strong> is a girls' boarding school in Magic for Fairies and the most prestigious educational institution for fairies.</p>
