--- a/cadastro.html
+++ b/cadastro.html
@@ -22,7 +22,7 @@
     <img src="images/ColegioWins.png" alt="fgdg">
 
   </section>
-  
+
   <div id="check">
     <p id="subtitle" >Pré inscrição na Alfea College of Faries</p>
 
@@ -102,6 +102,13 @@
           
           <button type="submit" class="btn">Enviar</button>
           <button type="reset" class="clearbtn">Apagar respostas</button>
+
+
+          <div class="zap">
+            <a target="whats" href="https://api.whatsapp.com/send?phone=5521986301460">
+                <img src="images/whatsapp-logo-icone.png"/>
+            </a>
+        </div>
         </form>
       </div> 
     
