--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <p> Alfea is an ancient school for fairies, and apparently the only one dedicated to fairy education only. The Alfea students are mostly in training ages 16-18.</p>
         <p> Fairies here learn how to <strong>control their power, fight evil, learn new spells as well as be guardians of their planets</strong>, or in many cases, learn how to be their realms' queens.</p>
 
-        <!-- <iframe src="images/funkwinx.mp4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+        <iframe src="images/funkwinx.mp4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <h2>Grade curricular</h2>
         <section class="grade">
@@ -100,11 +100,20 @@
 <!-- 
         <img src="images/alfea.png" alt="Alfea and forest"> -->
 
+
+        <div class="zap">
+            <a target="whats" href="https://api.whatsapp.com/send?phone=5521986301460">
+                <img src="images/whatsapp-logo-icone.png"/>
+            </a>
+        </div>
 </main>
 
 <footer>
     <a href="https://www.instagram.com/winxclub/"><img src="./images/instagram.png" alt="Instagram's Logo" class="social"></a>
     <a href="https://www.facebook.com/WinxClub/"><img src="./images/facebook-logo.png" alt="Facebook's Logo"class="social"></a>
 </footer>
+
+
+
 </body>
 </html>
