--- a/cadastro.html
+++ b/cadastro.html
@@ -44,7 +44,7 @@
               <div class="campo">
                 <label for="celParent"><strong>Celular</strong></label>
                 <input class="phone" type="text" onkeyup="this.value=this.value.replace(/[^\d]/,'')"
-                  pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="DDD + Celular" name="celParent" required>
+                  maxlength="11" placeholder="DDD + Celular" name="celParent" required>
               </div>
 
               <div id="check">                
