--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                
     </header>
 
-        <main>
+        <main class="container"> 
             <h1>Alfea College for Faries</h1>
 
         <section>
