--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
             </div>
             <div class="card">
-                <img src="images/Agua.jpg" alt="">
+                <img src="images/agua.jpg" alt="">
                 <h1>Cognitive analysis</h1>
 
             </div>
