--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <p> Alfea is an ancient school for fairies, and apparently the only one dedicated to fairy education only. The Alfea students are mostly in training ages 16-18.</p>
         <p> Fairies here learn how to <strong>control their power, fight evil, learn new spells as well as be guardians of their planets</strong>, or in many cases, learn how to be their realms' queens.</p>
 
-        <iframe class="videoWinx" src="images/funkwinx.mp4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe class="videoWinx" src="images/funkWinx.mp4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <h2>Grade curricular</h2>
         <section class="grade">
